프로젝트 관리

--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -153,17 +153,20 @@
            
             <section id = "recentpro_project" style="color:{{projects.0.color}}">{{posts.0.project}}</section>
             <section id = "recentpro_title">{{posts.0.title}}</section>
+            <section id = "recentpro_date">{{posts.0.day}}</section>
 
         </div>
         <div class = "item" id = "chatting_2">
             <section id = "recentpro_project" style="color:{{projects.1.color}}">{{posts.1.project}}</section>
             <section id = "recentpro_title">{{posts.1.title}}</section>
+            <section id = "recentpro_date">{{posts.1.day}}</section>
 
 
         </div>
         <div class = "item" id = "chatting_3">
             <section id = "recentpro_project" style="color:{{projects.2.color}}">{{posts.2.project}}</section>
             <section id = "recentpro_title" >{{posts.2.title}}</section>
+            <section id = "recentpro_date">{{posts.2.day}}</section>
 
         </div>
 
