--- a/runningmate/mateapp/templates/mateapp/project.html
+++ b/runningmate/mateapp/templates/mateapp/project.html
@@ -83,15 +83,18 @@
         <div class = "item3" id = "pro_runningmate_text">러닝메이트
 
         </div>
-        <div class = "item3" id = "pro_runningmate">
+        <div class = "item3" id = "pro_runningmate" style="text-align:center">
+           
             
-            <div id = "f1" style="margin-left: 3vmin;">
-            <div class = "friend" id = "friend1" ></div><h4>이영서</h4></div>
-            <div id = "f2"><div class = "friend" id = "friend2"></div><h4>오준서</h4></div>
-            <div id = "f3"><div class = "friend" id = "friend3"></div><h4>윤영서</h4></div>
-            <div id = "f4"><div class = "friend" id = "friend4"></div><h4>김성준</h4></div>
-            <div id = "f5"><div class = "friend" id = "friend5"></div><h4>류슬기</h4></div>
-            <div id = "f6"><div class = "friend" id = "friend6"></div><h4>이예나</h4></div>
+
+            {% for follower in project.followers.all %}
+            
+            <div id = "f1"class="scroll--element" style = " width:90px; height:90px; margin-top:0;background-color:; border-radius: 50%; background-image: url({{ follower.profile.profile.url }});
+                background-size: contain; background-repeat: no-repeat;background-position: center; background-color:{{project.color}}; margin-left:15px;"></div>
+            
+            {% endfor %}
+
+
             
         </div>
         <div class = "item3" id = "pro_runningspace_text">
