--- a/runningmate/mateapp/templates/mateapp/mainpage.html
+++ b/runningmate/mateapp/templates/mateapp/mainpage.html
@@ -32,6 +32,8 @@
     display: inline-block;
     padding-right: 10px;
     }
+
+
 </style>
 
 <div id = "rec3">
@@ -80,7 +82,7 @@
             <script src="{% static 'js/calendar.js'%}"></script>
         </div>
         <div class = "item" id = "schedule_1">
-            {% if calendar.count == 0 %}
+            {% if calendar.0.title == None %}
                 <div id = 'no_schedule'>아직 등록된 일정이 없어요</div>
             {% else %} 
                 <div id = "sch1">
@@ -99,10 +101,8 @@
             {% endif %}
         </div>
         <div class = "item" id = "schedule_2">
-            {% if calendar.count == 0 %}
-                <div id = 'no_schedule'>아직 등록된 일정이 없어요</div>
-            {% elif calendar.count == 1 %}
-                <div id = 'no_schedule'>아직 등록된 일정이 없어요</div>
+            {% if calendar.1.title == None %}
+            <div id = 'no_schedule'>아직 등록된 일정이 없어요</div>
             {% else %} 
                 <div id = "sch2">
                     <section id = "cal_title2" style="color: {{calendar.1.color}}; ">{{calendar.1.title}}</section>
@@ -122,13 +122,22 @@
 
 
         <div class = "item" id = "runningmate_text">러닝메이트</div>
-        <img src="{{ user.profile.profile.url }}" width="50px" height="50px">
+        {% for follower in project.followers.all %}
+            <img src="{{ follower.profile.profile.url }}" width="40px" height="40px">
+        {% endfor %}
+        <!-- <img src="{{ user.profile.profile.url }}" width="50px" height="50px"> -->
         <div class = "item" id = "runningmate">
             
-            <!-- 등록된 과목 없으면 -->
-            <div id = "no_runningmate">아직 등록된 러닝메이트가 없어요.</div>
+            {% for project in projects %} 
 
-             <!-- 있으면 러닝메이트 띄움 -->
+            {%empty%}
+                <div id = "no_project">아직 등록된 러닝메이트가 없어요.</div>
+            {%endfor%}
+            {% for follower in project.followers.all %}
+            
+            <img src="{{ follower.profile.profile.url }}" width="40px" height="40px">
+
+            {% endfor %}
             <!-- <div id = "f1" style="margin-left: 3vmin;"><div class = "friend" id = "friend1"></div><h4>이영서</h4></div>
             <div id = "f2"><div class = "friend" id = "friend2"></div><h4>오준서</h4></div>
             <div id = "f3"><div class = "friend" id = "friend3"></div><h4>윤영서</h4></div>
@@ -140,16 +149,32 @@
 
 
 
-        <div class = "item" id = "chatting_text">최근 프로젝트
+        <div class = "item" id = "chatting_text">최근 회의
             {{ profile.profile }}
         </div>
         <div class = "item" id = "chatting_1">
-            <div id = "no_project">아직 등록된 프로젝트가 없어요.</div>
+            {% for post in posts %} 
+             
+            {%empty%}
+                <div id = "no_project">아직 등록된 회의가 없어요.</div>
+            {%endfor%}
+           
+            <section id = "recentpro_project" style="color:{{projects.0.color}}">{{posts.0.project}}</section>
+            <section id = "recentpro_title">{{posts.0.title}}</section>
+            <section id = "recentpro_date">{{posts.0.day}}</section>
+
         </div>
         <div class = "item" id = "chatting_2">
+            <section id = "recentpro_project" style="color:{{projects.1.color}}">{{posts.1.project}}</section>
+            <section id = "recentpro_title">{{posts.1.title}}</section>
+            <section id = "recentpro_date">{{posts.1.day}}</section>
+
 
         </div>
         <div class = "item" id = "chatting_3">
+            <section id = "recentpro_project" style="color:{{projects.2.color}}">{{posts.2.project}}</section>
+            <section id = "recentpro_title" >{{posts.2.title}}</section>
+            <section id = "recentpro_date">{{posts.2.day}}</section>
 
         </div>
 
@@ -163,17 +188,20 @@
             {% if projects %}
             {% for project in projects %}
 
-            {% for follower in project.followers.all %}
             
-            <img src="{{ follower.profile.profile.url }}" width="40px" height="40px">
-
-            {% endfor %}
             
             <div class="scroll--element" id = "subject1" style="background-color: {{project.color}};">
                 <div id = "{{project.id}}">
                         <h6>{{project.startday}}~{{project.endday}}</h6>
                         <h2>{{project.title}}</h2>
                         <h3>{{project.summary}}</h3>
+                        {% for project in projects %}
+
+                        {% for follower in project.followers.all %}
+                        <img src="{{ follower.profile.profile.url }}" width="40px" height="40px">
+                        {% endfor %}
+
+            {% endfor %}
                 </div>
             </div>
             {% endfor %}
