투데이 오늘 날짜 요일 표시

--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -154,12 +154,15 @@
     </div>
 
     <div class="item2" id="today_date">
-      <button class="nav-btn go-prev" onclick="preDay()">&lt;</button>
+      <!-- <button class="nav-btn go-prev" onclick="preDay()">&lt;</button> -->
       <div id="today_day">
-        
+        <div class="day_week">
+        </div>
+        <div class="date_week">
+        </div>
       </div>
+      <!-- <button class="nav-btn go-next" onclick="nextDay()">&gt;</button> -->
       <script src="{% static 'js/today.js'%}"></script>
-      <button class="nav-btn go-next" onclick="nextDay()">&gt;</button>
     </div>
 
     <!-- 디데이 -->
