--- a/runningmate/runningmate/static/css/calender.css
+++ b/runningmate/runningmate/static/css/calender.css
@@ -220,6 +220,23 @@ table {
     margin-top: -11%;
 }
 
+/* 투데이 - 오늘 요일 날짜 표기 ---------*/
+.day_week {
+    font-family: 'Roboto';
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.date_week {
+    font-family: 'AppleSDGothicNeoB';
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 3%;
+}
+
 /* 투데이 - 디데이 */
 #dday1, #dday2, #dday3{
     background-color: white
