투데이 입력폼 배치 조정 추가

--- a/runningmate/mateapp/templates/mateapp/create_schedule.html
+++ b/runningmate/mateapp/templates/mateapp/create_schedule.html
@@ -78,10 +78,10 @@
                 <textarea type="body" id="ipt4" name="body" id="" cols="30" rows="10" placeholder="  일정을 입력해주세요"></textarea><br><br>
                 </div>
             </div>
-            <a href="{% url 'mateapp:calendar' %}">
+            <a href="{% url 'mateapp:calendar' %}" style="text-decoration: none;">
                 <div id="btn">
                 <button type="submit">추가하기</button>
-                </div>   
+                </div>
             </a>         
         </form>
     </div>    
