캘린더 페이지 로그아웃 버튼 위치 수정

--- a/runningmate/runningmate/static/css/style.css
+++ b/runningmate/runningmate/static/css/style.css
@@ -437,10 +437,10 @@ span{
 }
 
 #logout_button{
-    position: absolute;
+    position: fixed;
     width: 3vmin;
     height: 3vmin;
-    left: 15vw;
+    left: 14.5vw;
     top: 90vh;
 }
 
