--- a/runningmate/runningmate/static/css/calender.css
+++ b/runningmate/runningmate/static/css/calender.css
@@ -5,7 +5,7 @@
     grid-template-columns: 2fr 1.5fr 2fr;
     grid-template-rows: 1fr 5fr 1fr 2.5fr 1.5fr 1.5fr 1.5fr 15px;
     height: 100%;
-    row-gap: 10px;
+    row-gap: 15px;
     column-gap: 20px;
     font-family: AppleSDGothicNeoB;
     font-weight: 500;
@@ -112,9 +112,12 @@
 
 
 /*캘린더 페이지 캘린더*/
+.calendar {
+    margin-top: 3%;
+}
 
 .cal_main2{/*캘린더 페이지 캘린더*/
-    font-family: AppleSDGothicNeoB;
+    font-family: 'AppleSDGothicNeoB';
     font-size: 1.7vmin;
 }
 
@@ -280,7 +283,7 @@ table {
 }
 
 #plus{
-    font-family:AppleSDGothicNeoM;
+    font-family: 'AppleSDGothicNeoM';
     display: inline-block; 
     font-size:larger; 
     vertical-align: middle;
