로그아웃 버튼

--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -295,7 +295,7 @@
   <!-- 리스트에 담긴 걸 포문 두개로 나눠서 투두 하나씩 불러와서 if문으로
   불러온 하나의 투두랑 연결된 하나의 프로젝트가 투두 모델에서 외래 -->
 </div>
-<a href="{% url 'account_logout' %}"><img id = "logout_button" src =  "{% static 'images/logout.png' %}"/></a>
+<a href="{% url 'account_logout' %}"><img id = "logout_button" src =  "{% static 'images/logout.png' %}" style="position: fixed;"/></a>
 
 
 <script>
