--- a/runningmate/mateapp/templates/mateapp/create_schedule.html
+++ b/runningmate/mateapp/templates/mateapp/create_schedule.html
@@ -86,5 +86,5 @@
         </form>
     </div>    
 </div>
-
+<a href="{% url 'account_logout' %}"><img id = "logout_button" src =  "{% static 'images/logout.png' %}" style="position: fixed;"/></a>
 {% endblock %}
