--- a/runningmate/mateapp/templates/mateapp/project_post.html
+++ b/runningmate/mateapp/templates/mateapp/project_post.html
@@ -109,7 +109,7 @@
         {% for comment in boards %}
         <div class = "item3" id = "{{comment.id}}">
             <div id = "mimoji_place" >
-                <section id = "mimoji" style="width: 70px; height:70px; border-radius: 50%; background:{{project.color}}; ;margin:10px;">
+                <section id = "mimoji" style="width: 70px; height:70px; border-radius: 50%; background:{{project.color}}; ;margin:10px;background-image: url({{ user.profile.profile.url }})">
                     
                 </section>
             </div>
@@ -137,7 +137,8 @@
                         {% endif %}
         
                         <li class = "page-item active">
-                            <a class = "page-link"border: none;>{{boards.number}}/{{boards.paginator.num_pages}}</a>
+                            <a class = "page-link"border: none;>
+                                {{boards.number}}/{{boards.paginator.num_pages}}</a>
                         </li>
         
                         {% if boards.has_next %}
@@ -161,4 +162,5 @@
     </div>
 
 </div>
+<a href="{% url 'account_logout' %}"><img id = "logout_button" src =  "{% static 'images/logout.png' %}" style="position: fixed;"/></a>
 {% endblock %}
