--- a/runningmate/addproject/templates/addproject/newproject.html
+++ b/runningmate/addproject/templates/addproject/newproject.html
@@ -82,5 +82,5 @@
         </form>
     </div>
 </div>
-
+<a href="{% url 'account_logout' %}"><img id = "logout_button" src =  "{% static 'images/logout.png' %}" style="position: fixed;"/></a>
 {% endblock %}
