--- a/runningmate/runningmate/static/css/project.css
+++ b/runningmate/runningmate/static/css/project.css
@@ -390,3 +390,14 @@ h4{
     font-weight: 500;
     font-size: 1.8vmin;
 }
+
+#post_body{
+    margin-left: 20px;
+   
+    font-family: 'AppleSDGothicNeoM';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #222B45;
+}
