--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -156,9 +156,9 @@
     <div class="item2" id="today_date">
       <!-- <button class="nav-btn go-prev" onclick="preDay()">&lt;</button> -->
       <div id="today_day">
-        <div class="day_week">
+        <div class="day_week"  style="margin-bottom:3px">
         </div>
-        <div class="date_week">
+        <div class="date_week" style="margin-bottom:0 ;" >
         </div>
       </div>
       <!-- <button class="nav-btn go-next" onclick="nextDay()">&gt;</button> -->
