캘린더리스트  체크박스 아웃라인 제거

--- a/runningmate/mateapp/templates/mateapp/calendar.html
+++ b/runningmate/mateapp/templates/mateapp/calendar.html
@@ -278,7 +278,7 @@
     <div class="calendar_content">
       <ul>
         <li>
-          <input type="checkbox" class="calendar_cb" id="calendar_checkbox" style="accent-color: {{calendar.color}}; outline: 2px solid {{calendar.color}};">
+          <input type="checkbox" class="calendar_cb" id="calendar_checkbox" style="accent-color: {{calendar.color}};">
           <label for="calendar_checkbox"></label>
         </li>
         <li>
